fix: fix user Menu z-index

--- a/src/shared/Header/User/index.less
+++ b/src/shared/Header/User/index.less
@@ -18,6 +18,7 @@
     flex-direction: column;
     padding: 10px;
     display: none;
+    z-index: 1;
 
     &.active {
       display: block;
